--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,41 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: black;
+    background-color: rgb(255, 255, 255);
 }
 
+a {
+    text-decoration: none;
+}
 
+.link {
+    color: cornflowerblue;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.title_h1 {
+    color: #222222;
+    font-size: 28px;
+    line-height: 32px;
+    font-weight: bold;
+}
+
+.par {
+    font-style: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 30px;
+    color: #7D7987;
+}
+
+.title_h2 {
+    color: coral;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 80px;
+}
 /*-----------Header--------------*/
 header {
     background-color: rgb(54, 43, 43);
@@ -25,8 +56,6 @@ nav ul li {
 }
 
 nav ul li a {
-    color: white;
-    text-decoration: none;
     padding: 5px 10px;
     transition: color 0.3s;
 }
@@ -37,9 +66,6 @@ nav ul li a:hover {
 
 /*-------Main page-------*/
 
-.wrapper {
-    color: #fff;
-}
 .main_page {
     display: flex;
     justify-content: center;
@@ -51,7 +77,6 @@ nav ul li a:hover {
     padding-left: 210px;
     padding-right: 210px;
     text-align: justify;
-    font-size: 20px;
 }
 
 
